# Astoria-Interviwer

./: README.md  candidate.py  data_models.py  interview_log.json  interviewer.py  main.py  objectives_generator.py  openai_client.py  pyproject.toml  questions_generator.py
data/: company_profile.txt  job_description.txt  resume.txt
